k8s/istio/00-istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stirling-pdf-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "stirlingpdf.anish.sh"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: stirlingpdf-anish-sh-domain-cert-prod
    hosts:
    - "stirlingpdf.anish.sh"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stirling-pdf
  namespace: stirling
spec:
  hosts:
  - "stirlingpdf.anish.sh"
  gateways:
  - istio-system/stirling-pdf-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: stirling-pdf
